--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -3,8 +3,8 @@ title: About
 slug: "/about"
 ---
 
-Hi!
+你好!
 
-Remus Lupin - also known as Moony - is currently teaching "Defense against the Dark Arts" at Hogwarts. He was afflicted with lycanthropy during his childhood, as a result of Fenrir Greyback's revenge against Lyall. He attended Hogwarts School of Witchcraft and Wizardry from 1971-1978 and was Sorted into Gryffindor House. During his school years he was one of the Marauders, best friends with Sirius Black, James Potter, and Peter Pettigrew. Together they created the Marauder's Map.
+莱姆斯-卢平--也被称为莫尼--目前在霍格沃茨教 "黑魔法防御"。由于芬里尔-格雷贝克对莱尔的报复，他在童年时期就患上了狼人症。1971-1978年，他在霍格沃茨魔法学校上学，被分到格兰芬多学院。在他的学生时代，他是掠夺者之一，与小天狼星布莱克、詹姆斯-波特和彼得-小矮星是最好的朋友。他们一起绘制了掠夺者地图。
 
-He fought against Death Eaters once more in the Second Wizarding War, during which he lost his friend Sirius. In 1997, Remus married fellow Order member Nymphadora Tonks and had a son, Edward Remus Lupin, of whom he named Harry the godfather. Remus fought at the Battle of Hogwarts on 2 May, 1998, during which his wife was murdered by Bellatrix Lestrange. Remus was also murdered by Death Eater, Antonin Dolohov, during the first half of the same battle. His death was avenged by Filius Flitwick.
+在第二次巫师战争中，他再次与食死徒作战，期间他失去了他的朋友小天狼星。1997年，莱姆斯与同为骑士团成员的妮法多拉-唐克斯结婚，并有了一个儿子，爱德华-莱姆斯-卢平，他指定哈利为他的教父。1998年5月2日，莱姆斯参加了霍格沃茨之战，期间他的妻子被贝拉特里克斯-莱斯特兰奇谋杀。在同一战役的上半场，莱姆斯也被食死徒安东尼-多洛霍夫杀害。他的死是由菲利乌斯-弗利特威克报仇的。
